--- a/Fluent.Ribbon/Themes/Controls/TwoLineLabel.xaml
+++ b/Fluent.Ribbon/Themes/Controls/TwoLineLabel.xaml
@@ -89,14 +89,14 @@
                      Value="">
                 <Setter Property="Visibility"
                         TargetName="PART_TextRun2"
-                        Value="Hidden" />
+                        Value="Collapsed" />
             </Trigger>
             <Trigger Property="Text"
                      SourceName="PART_TextRun2"
                      Value="{x:Null}">
                 <Setter Property="Visibility"
                         TargetName="PART_TextRun2"
-                        Value="Hidden" />
+                        Value="Collapsed" />
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
