--- a/Fluent.Ribbon/Themes/Themes/Theme.Template.xaml
+++ b/Fluent.Ribbon/Themes/Themes/Theme.Template.xaml
@@ -15,6 +15,7 @@
     
     <Color x:Key="Theme.PrimaryAccentColor">{{Fluent.Ribbon.Colors.AccentBaseColor}}</Color>
     <SolidColorBrush x:Key="Theme.ShowcaseBrush" Color="{{Fluent.Ribbon.Colors.AccentBaseColor}}" options:Freeze="True" />
+    <system:Boolean x:Key="Theme.IsHighContrast">{{IsHighContrast}}</system:Boolean>
 
     <!-- COLORS -->
 
